--- a/package.json
+++ b/package.json
@@ -42,7 +42,9 @@
     "parserOptions": {
       "parser": "@babel/eslint-parser"
     },
-    "rules": {}
+    "rules": {
+      "no-useless-escape": ["error", { "escape": ["@"] }]
+    }
   },
   "browserslist": [
     "> 1%",
