--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@mdi/font": "^7.4.47",
     "core-js": "^3.8.3",
     "iconify": "^1.4.0",
+    "pinia": "^2.2.4",
     "roboto-fontface": "*",
     "vue": "^3.2.13",
     "vue-i18n": "^9.13.1",
@@ -42,8 +43,7 @@
     "parserOptions": {
       "parser": "@babel/eslint-parser"
     },
-    "rules": {
-    }
+    "rules": {}
   },
   "browserslist": [
     "> 1%",
