--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@iconify/vue": "^4.1.2",
     "@mdi/font": "^7.4.47",
     "core-js": "^3.8.3",
+    "emailjs-com": "^3.2.0",
     "iconify": "^1.4.0",
     "pinia": "^2.2.4",
     "roboto-fontface": "*",
