--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@emailjs/browser": "^4.4.1",
     "@iconify/vue": "^4.1.2",
     "@mdi/font": "^7.4.47",
     "core-js": "^3.8.3",
