--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "vue": "^3.2.13",
     "vue-i18n": "^9.13.1",
     "vue-router": "^4.4.2",
+    "vue-sweetalert2": "^5.0.11",
     "vuetify": "^3.0.0-beta.0",
     "webfontloader": "^1.0.0"
   },
